--- a/style.css
+++ b/style.css
@@ -6,18 +6,47 @@ h1 {
 	text-align: center;
 }
 
+.image {
+	width: 100%;
+	height: auto;
+}
+
 .flexbox {
-	flex-direction: row;
-	align-items: left;
 	display: flex;
+	flex-direction: column;
 	text-align: left;
 	flex-wrap: wrap;
 }
 
-.flexbox > div {
+.row > div {
 	width: 50%;
+}
+
+.row {
+	display: flex;
+	flex-wrap: wrap;
+	flex: 1;
+}
+
+.item {
+	flex: 1;
+	width:100%;
+	flex-grow: 1;
 }
 
 #ack-header {
 	text-align: center;
+}
+
+
+#button1 {
+	background-color: red;
+}
+
+#button2 {
+	background-color: mediumpurple;
+}
+
+#button3 {
+	background-color: turquoise;
 }
